--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apiresume",
   "version": "0.0.0",
+  "private": true,
   "description": "",
-  "main": "app.js",
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
